[package]
name = "stats"
version = "0.1.0"
edition = "2021"

[lib]
name = "stats"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
cabrillo-log = { path = "../cabrillo-log" }
enricher = { path = "../enricher" }
gluesql = { version = "0.18", default-features = false, features = ["gluesql_memory_storage"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
